python-flask/k8s/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask
  labels:
    app: python-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-flask
  template:
    metadata:
      labels:
        app: python-flask

    spec:
      containers:
        - name: python-flask
          image: myapp
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
          startupProbe:
            httpGet:
              path: /ops/start
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ops/ready
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 15
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ops/live
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 15
            failureThreshold: 3
          resources:
            limits:
              cpu:    "500m"   # maximum amount of cpu in millicpu
              memory: "200Mi"  # maximum amount of ram for the container
            requests:
              cpu:    "20m"   # minimum amount of cpu in millicpu
              memory: "20Mi"  # minimum amount of ram
