python-flask/k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask
spec:
  selector:
    app: python-flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
