python-flask/k8s/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-flask
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2


spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /python-flask(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: python-flask
                port:
                  number: 80
